--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -9,7 +9,10 @@ $color-menu-1: #FCDFDB;
 $color-menu-2: #FFF5FE;
 $color-menu-3: #F9F9F9;
 $color-menu-4: #FDFFFD;
+$color-border:#A1C181;
 
-$size-typo-header: 10rem;
-$size-typo-next: 4rem;
-$size-typo-footer: 2.2rem;
+$size-typo-header: 6em;
+$size-typo-next: 4em;
+$size-typo-footer: 2.2em;
+$size-typo-heading-page: 4em;
+$size-typo-heading-menu: 2em;
