--- a/layouts/_footer.scss
+++ b/layouts/_footer.scss
@@ -3,11 +3,12 @@
 .footer {
   display: grid;
   grid-template: 1fr 1fr 1fr/25% 50% 25%;
-  height: 6em;
+  height: 7em;
   width: 100%;
   background-color: $color-primary;
   position: fixed;
   bottom: 0;
+  box-shadow: 0 -0.1em 0.5em $color-border;
   &__btn {
     color: $color-typo;
     text-decoration: none;
