--- a/layouts/_header.scss
+++ b/layouts/_header.scss
@@ -7,6 +7,7 @@
   background-color: $color-primary;
   width: 100%;
   height: 15em;
+  box-shadow: 0 0.1em 0.5em $color-border;
   &__heading {
     color: $color-typo-header;
     font-size: $size-typo-header;
