--- a/main.scss
+++ b/main.scss
@@ -7,6 +7,7 @@
 @import "./components/buttons";
 @import "./layouts/header";
 @import "./layouts/footer";
+@import "./layouts/page";
 @import "./pages/accueil";
 @import "./pages/note";
 @import "./pages/chic";
