--- a/pages/_accueil.scss
+++ b/pages/_accueil.scss
@@ -45,6 +45,7 @@
     font-size: $size-typo-next;
     color: $color-typo;
     background-color: $color-primary;
+    box-shadow: 0.01em 0.01em 0.01em 0.01em $color-border;
     border-radius: 1.5rem;
     width: 10em;
     height: 1.8em;
