--- a/utils/_mixins.scss
+++ b/utils/_mixins.scss
@@ -32,12 +32,13 @@
     margin-bottom: 0;
   }
   label {
-    padding-top: 3.5em;
-    padding-bottom: 1em;
+    padding-top: 3em;
+    padding-bottom: 0.5em;
     font-size: 2em;
     clear: both;
   }
   p {
+    text-align: left;
     font-size: 1.5em;
   }
   span {
