--- a/utils/_mixins.scss
+++ b/utils/_mixins.scss
@@ -23,23 +23,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 5rem 5rem 5rem 5rem;
   box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
-  width: 85%;
-  padding-top: 4em;
-  padding-bottom: 4em;
+  max-width: 85%;
   &__heading {
     font-size: $size-typo-heading-menu;
     margin-bottom: 0;
   }
+  h3 {
+    margin: 0;
+    text-align: center;
+  }
   label {
+    text-align: center;
     padding-top: 3em;
     padding-bottom: 0.5em;
     font-size: 2em;
     clear: both;
   }
-  p {
-    text-align: left;
-    font-size: 1.5em;
+  &__text {
+    font-size: $size-typo-text-menu;
   }
   span {
     float: right;
