--- a/main.css
+++ b/main.css
@@ -1,3 +1,20 @@
+/*.underligne {
+  &::after {
+    content: "";
+    position: relative;
+    width: 0;
+    height: 0.2rem;
+    display: block;
+    margin-top: 1px;
+    right: 0;
+    background: black;
+    transition: all 700ms ease-in-out;
+  }
+  &:hover:after {
+    width: 100%;
+    left: 0;
+    background: black;
+  }*/
 body {
   color: #404040;
   margin: 0;
@@ -477,9 +494,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
@@ -504,11 +518,22 @@ body {
   clear: both;
 }
 
+.menu .underligne {
+  background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
+  background-size: 0% 100%;
+  -webkit-transition: background-size 1s;
+  transition: background-size 1s;
+}
+
+.menu .underligne:hover {
+  background-size: 100% 100%;
+}
+
 .menu__text {
   font-size: 1.5em;
 }
 
-.menu span {
+.menu .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
@@ -519,11 +544,13 @@ body {
 }
 
 .menu.menu--1 .fa--top {
+  text-align: center;
   font-size: 4rem;
   margin-top: 4rem;
 }
 
 .menu.menu--1 .fa--bottom {
+  text-align: center;
   font-size: 2.5rem;
   margin-top: 4rem;
 }
@@ -545,9 +572,6 @@ h4 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
@@ -572,11 +596,22 @@ h4 {
   clear: both;
 }
 
+.menu .underligne {
+  background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
+  background-size: 0% 100%;
+  -webkit-transition: background-size 1s;
+  transition: background-size 1s;
+}
+
+.menu .underligne:hover {
+  background-size: 100% 100%;
+}
+
 .menu__text {
   font-size: 1.5em;
 }
 
-.menu span {
+.menu .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
@@ -597,9 +632,6 @@ h4 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
@@ -624,11 +656,22 @@ h4 {
   clear: both;
 }
 
+.menu .underligne {
+  background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
+  background-size: 0% 100%;
+  -webkit-transition: background-size 1s;
+  transition: background-size 1s;
+}
+
+.menu .underligne:hover {
+  background-size: 100% 100%;
+}
+
 .menu__text {
   font-size: 1.5em;
 }
 
-.menu span {
+.menu .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
@@ -649,9 +692,6 @@ h4 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 5rem 5rem 5rem 5rem;
   -webkit-box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
           box-shadow: 0.1em 0.1em 1em 0.5em rgba(0, 0, 0, 0.1);
@@ -676,11 +716,22 @@ h4 {
   clear: both;
 }
 
+.menu .underligne {
+  background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
+  background-size: 0% 100%;
+  -webkit-transition: background-size 1s;
+  transition: background-size 1s;
+}
+
+.menu .underligne:hover {
+  background-size: 100% 100%;
+}
+
 .menu__text {
   font-size: 1.5em;
 }
 
-.menu span {
+.menu .price {
   float: right;
   font-weight: bold;
   padding-left: 2em;
