--- a/pages/_note.scss
+++ b/pages/_note.scss
@@ -3,10 +3,12 @@
   &.menu--1 {
     background-color: $color-menu-1;
     .fa--top {
+      text-align: center;
       font-size: 4rem;
       margin-top: 4rem;
     }
     .fa--bottom {
+      text-align: center;
       font-size: 2.5rem;
       margin-top: 4rem; 
     }
