--- a/layouts/_footer.scss
+++ b/layouts/_footer.scss
@@ -9,6 +9,7 @@
   position: fixed;
   bottom: 0;
   box-shadow: 0 -0.1em 0.5em $color-border;
+  z-index: 2;
   &__btn {
     color: $color-typo;
     text-decoration: none;
