--- a/main.css
+++ b/main.css
@@ -1,20 +1,4 @@
-/*.underligne {
-  &::after {
-    content: "";
-    position: relative;
-    width: 0;
-    height: 0.2rem;
-    display: block;
-    margin-top: 1px;
-    right: 0;
-    background: black;
-    transition: all 700ms ease-in-out;
-  }
-  &:hover:after {
-    width: 100%;
-    left: 0;
-    background: black;
-  }*/
+@charset "UTF-8";
 body {
   color: #404040;
   margin: 0;
@@ -95,14 +79,14 @@ body {
 }
 
 .card:hover .card__content--out {
-  -webkit-animation: fadeout 2s forwards;
-          animation: fadeout 2s forwards;
+  -webkit-animation: fadeout 1s forwards;
+          animation: fadeout 1s forwards;
 }
 
 .card:hover .card__content--in {
   visibility: visible;
-  -webkit-animation: fadein 2s 300ms backwards cubic-bezier(0.77, 0.02, 0.24, 0.96);
-          animation: fadein 2s 300ms backwards cubic-bezier(0.77, 0.02, 0.24, 0.96);
+  -webkit-animation: fadein 1.5s 300ms backwards cubic-bezier(0.77, 0.03, 0.41, 0.81);
+          animation: fadein 1.5s 300ms backwards cubic-bezier(0.77, 0.03, 0.41, 0.81);
 }
 
 @-webkit-keyframes fadeout {
@@ -297,6 +281,7 @@ body {
   bottom: 0;
   -webkit-box-shadow: 0 -0.1em 0.5em #A1C181;
           box-shadow: 0 -0.1em 0.5em #A1C181;
+  z-index: 2;
 }
 
 .footer__btn {
@@ -343,7 +328,7 @@ body {
 }
 
 .page__heading {
-  font-size: 2.5em;
+  font-size: 2.5rem;
   margin-top: 1em;
   margin-bottom: 0.5em;
 }
@@ -501,7 +486,7 @@ body {
 }
 
 .menu__heading {
-  font-size: 3.2em;
+  font-size: 3.2rem;
   margin-bottom: 0;
 }
 
@@ -510,22 +495,22 @@ body {
   text-align: center;
 }
 
-.menu label {
+.menu b {
   text-align: center;
   padding-top: 3em;
   padding-bottom: 0.5em;
-  font-size: 2em;
+  font-size: 2rem;
   clear: both;
 }
 
-.menu .underligne {
+.menu .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 1s;
-  transition: background-size 1s;
+  -webkit-transition: background-size 200ms ease-in-out;
+  transition: background-size 200ms ease-in-out;
 }
 
-.menu .underligne:hover {
+.menu .underline:hover {
   background-size: 100% 100%;
 }
 
@@ -541,6 +526,25 @@ body {
 
 .menu.menu--1 {
   background-color: #FCDFDB;
+  /*b {
+      &::after {//Barre horizontal entrée plat dessert
+        content: "";
+        display: block;
+        position: relative;
+        left: 0;
+        width: 100%;
+        bottom: $size-typo-label/1.5;
+        height: 10px;
+        background: black;
+      }
+      .underline {//fond coupant la barre
+        display: inline-block;
+        padding: 0 90px;
+        background: $color-menu-1;
+        position: relative;
+        z-index: 1;
+      }
+    }*/
 }
 
 .menu.menu--1 .fa--top {
@@ -579,7 +583,7 @@ h4 {
 }
 
 .menu__heading {
-  font-size: 3.2em;
+  font-size: 3.2rem;
   margin-bottom: 0;
 }
 
@@ -588,22 +592,22 @@ h4 {
   text-align: center;
 }
 
-.menu label {
+.menu b {
   text-align: center;
   padding-top: 3em;
   padding-bottom: 0.5em;
-  font-size: 2em;
+  font-size: 2rem;
   clear: both;
 }
 
-.menu .underligne {
+.menu .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 1s;
-  transition: background-size 1s;
+  -webkit-transition: background-size 200ms ease-in-out;
+  transition: background-size 200ms ease-in-out;
 }
 
-.menu .underligne:hover {
+.menu .underline:hover {
   background-size: 100% 100%;
 }
 
@@ -639,7 +643,7 @@ h4 {
 }
 
 .menu__heading {
-  font-size: 3.2em;
+  font-size: 3.2rem;
   margin-bottom: 0;
 }
 
@@ -648,22 +652,22 @@ h4 {
   text-align: center;
 }
 
-.menu label {
+.menu b {
   text-align: center;
   padding-top: 3em;
   padding-bottom: 0.5em;
-  font-size: 2em;
+  font-size: 2rem;
   clear: both;
 }
 
-.menu .underligne {
+.menu .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 1s;
-  transition: background-size 1s;
+  -webkit-transition: background-size 200ms ease-in-out;
+  transition: background-size 200ms ease-in-out;
 }
 
-.menu .underligne:hover {
+.menu .underline:hover {
   background-size: 100% 100%;
 }
 
@@ -699,7 +703,7 @@ h4 {
 }
 
 .menu__heading {
-  font-size: 3.2em;
+  font-size: 3.2rem;
   margin-bottom: 0;
 }
 
@@ -708,22 +712,22 @@ h4 {
   text-align: center;
 }
 
-.menu label {
+.menu b {
   text-align: center;
   padding-top: 3em;
   padding-bottom: 0.5em;
-  font-size: 2em;
+  font-size: 2rem;
   clear: both;
 }
 
-.menu .underligne {
+.menu .underline {
   background: linear-gradient(to top, black 0%, black 0.1rem, transparent 1px) no-repeat;
   background-size: 0% 100%;
-  -webkit-transition: background-size 1s;
-  transition: background-size 1s;
+  -webkit-transition: background-size 200ms ease-in-out;
+  transition: background-size 200ms ease-in-out;
 }
 
-.menu .underligne:hover {
+.menu .underline:hover {
   background-size: 100% 100%;
 }
 
